polyphone (1.6) unstable; urgency=low

 * Possibility to export presets from different soundfonts to one sf2
 * Export of samples from different soundfonts is allowed
 * In the virtual keyboard, using "shift" with an arrow makes a quicker move
 * Mutations available for 64' resultant (organ mixture creation tool)
 * Full screen mode
 * (fix) repetition is ignored when using arrow keys in the virtual keyboard
 * (fix) "0" was not selected when a new value is inserted in the table
 * (fix) forbidden characters are replaced by "_" when exporting files
 * (fix) selection in the tree now updates the virtual keyboard
 * (fix) GUI fix for mac

 -- Davy Triponney <davy.triponney@gmail.com>  XXX, XX Mar 2015 11:15:10 +0100


polyphone (1.5) UNRELEASED; urgency=low

 * italian translation
 * transposition tool
 * more options when renaming several elements
 * tool to remove all modulators
 * improved copy / paste functions in tables
 * improved copy / paste functions for modulators
 * arrows may be used to play the adjacent key or velocity
 * faster selection of multiple elements in the tree
 * (fix) bug when reading some wav files
 * (fix) sample synchronization in synth
 * (fix) bug when editing modulators

 -- Davy Triponney <davy.triponney@gmail.com>  Mon, 20 Oct 2014 18:37:28 +0100


polyphone (1.4) UNRELEASED; urgency=low

 * faster loading step and count of used / unused elements
 * the key range of the key pressed is displayed at the instrument level
 * middle C is emphasized on the keyboard
 * key names can include sharps or flats
 * button to assign the estimated pitch / correction at the sample level
 * mutations added in the mixture creation tools
 * column width may be fixed in instrument and preset tables
 * name of samples, instruments and presets may be adapted in case of duplicate
 * natural order sorting of items in the tree
 * focus policies in the tree improved
 * support for Mac OS X 10.6 and 10.7
 * support for sfArk v1 files